--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -1,4 +1,5 @@
  . Add a switch on the command line to use the Coq generation (generate the nodes to a file)
+ . Add axioms for %. (It it NOT built in in "z3 -si".)
  . Convert the BPLs in the test suite to Boogie 2.
  . Add null-by-default switch to bml2bpl.
  . Move to Boogie 2.
