--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -1,5 +1,9 @@
  . Use CLOPS.
+ . Configure the new categories/levels for logging/output.
+   (Search for "log-categ" to see places that must be fixed.)
  . Add a switch on the command line to use the Coq generation (generate the nodes to a file)
+ . Move astgen tests to astgen.
+ . Reorganize the code for turning on/off various phases.
  . Add axioms for %. (It it NOT built in in "z3 -si".)
  . Convert the BPLs in the test suite to Boogie 2.
  . Add null-by-default switch to bml2bpl.
