fixes from windows (1) don't use up all terminal width (behaves strangely on win) (2) added jar dependencies: how did it work on linux?

--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -1,3 +1,4 @@
+ . Fix the mess with genericutils versions.
  . Convert the BPLs in the test suite to Boogie 2.
  . Add a "for all types" construct.
  . Move to Boogie 2.
