--- a/src/freeboogie/trunk/FreeBoogie/TODO
+++ b/src/freeboogie/trunk/FreeBoogie/TODO
@@ -1,6 +1,6 @@
  . Fix the mess with genericutils versions.
  . Convert the BPLs in the test suite to Boogie 2.
- . Add a "for all types" construct.
+ . Add a "for all types" construct. (?)
  . Move to Boogie 2.
  . Release 0.2.
  . Add a switch on the command line to use the Coq generation (generate the nodes to a file)
@@ -32,9 +32,6 @@
  . The comments and code disagree for TypeChecker.checkExact
  . Release 0.8
  . Make flow graphs reducible
- . In some cases Spec# generates (assume ... h1[n1] == h2[n2]...) which
-   gets 'fixed' in old mode by adding a generic on procedure/implementation.
-   Is this a problem?
  . Get someone to review the code.
  . Release 0.9.
  . Change the grammar so it doesn't use syntactic predicates. NOTE:
