todo note for tomorrow

--- a/src/freeboogie/trunk/FreeBoogie/TODO
+++ b/src/freeboogie/trunk/FreeBoogie/TODO
@@ -1,3 +1,4 @@
+ . Convert boogie_AddMethod.bpl to Boogie 2.
  . Convert the BPLs in the test suite to Boogie 2.
  . Add a "for all types" construct. (?)
  . Move to Boogie 2.
