test commit emails

--- a/FreeBoogie/TODO
+++ b/FreeBoogie/TODO
@@ -74,5 +74,6 @@
  . Add a parser for SMT so that you can provide a piece of text to
    build an SmtTerm.
  . Release 0.16.
+ . Test
 
 vim:spell:ts=3:sw=3:fdm=manual:
