--- a/FreeBoogie/TODO
+++ b/FreeBoogie/TODO
@@ -2,8 +2,12 @@
  . Add hand-crafted tests for the Boogie 2 parser.
  . Parser for Boogie 2.
  . Desugar 'while'.
+ . AST: Put different type of global declarations in different lists.
+ . AST: Switch to immutable lists instead of the functional ones.
+   Reason: The Java virtual machine is (and will be) bad with tail 
+   recursive code.
+ . Update quantifiers with type variables.
  . Type checker for Boogie 2.
- . Add a "for all types" construct. (?)
  . Move to Boogie 2.
  . Release 0.2.
  . Move to new logging.
@@ -74,6 +78,7 @@
  . Add a parser for SMT so that you can provide a piece of text to
    build an SmtTerm.
  . Release 0.16.
- . Test
+ . Rename Passificator as EscjavaPasivator and review the code.
+ . Release 0.17.
 
 vim:spell:ts=3:sw=3:fdm=manual:
