The AlternativeMain seems done. It will replace Main after a bit more testing. Individual changes: (1) genericutils.Logger flushes (2) genericutils.SimpleGraph reports the node count in O(1) (3) java logging is replaced with genericutils.Logger in a few places (4) AlternativeVcGenerator is slightly nicer than VcGenerator. (5) Assuming asserts moved in ACalculus since it's independent     of whether SP or WP is used. Command line options changed too.

--- a/FreeBoogie/TODO
+++ b/FreeBoogie/TODO
@@ -19,7 +19,6 @@
  . Release 0.3.
  . Reorganize the code for turning on/off various phases.
  . Add null-by-default switch to bml2bpl.
- . Move astgen tests to astgen.
  . Release 0.4.
  . Simple interface to parse from strings.
  . Re-think what goes in TermBuilder and what goes in SmtTermBuilder.
@@ -79,6 +78,10 @@
    build an SmtTerm.
  . Release 0.16.
  . Rename Passificator as EscjavaPasivator and review the code.
+ . AST: Treat constants like functions with 0 arguments.
+ . Replacing "assert X" by "assert X; assume X", perhaps selectively,
+   should be done by a transformer. There's no need for the ugly boolean
+   in ACalculus.
  . Release 0.17.
 
 vim:spell:ts=3:sw=3:fdm=manual:
