--- a/trunk/FreeBoogie/TODO
+++ b/trunk/FreeBoogie/TODO
@@ -19,7 +19,6 @@
  . Release 0.3.
  . Reorganize the code for turning on/off various phases.
  . Add null-by-default switch to bml2bpl.
- . Move astgen tests to astgen.
  . Release 0.4.
  . Simple interface to parse from strings.
  . Re-think what goes in TermBuilder and what goes in SmtTermBuilder.
@@ -79,6 +78,10 @@
    build an SmtTerm.
  . Release 0.16.
  . Rename Passificator as EscjavaPasivator and review the code.
+ . AST: Treat constants like functions with 0 arguments.
+ . Replacing "assert X" by "assert X; assume X", perhaps selectively,
+   should be done by a transformer. There's no need for the ugly boolean
+   in ACalculus.
  . Release 0.17.
 
 vim:spell:ts=3:sw=3:fdm=manual:
