--- a/wiki/CodingStyle.wiki
+++ b/wiki/CodingStyle.wiki
@@ -10,7 +10,7 @@
  * Do _not_ use curly brackets for one-statement-one-line blocks. If more than one line is taken by the block then do use them. (Obviously, you _have_ to use them if more than one statement is in the block.) Also, if they are a loop body or follow an `if/else`, then put them on the same line as `if/for/while/...` if possible. Remember the Sun limitation to 80 character lines per line.
  * Do _not_ use parentheses, unless needed.
  * If you have to split a list on multiple lines (such as a parameter list) then put one item per line.
- * The length of variable names should be (positively) correlated to the size of their scope. It's perfectly fine to use a one-letter variable name if it is used only on three lines, but *not* if it is a field.
+ * The length of variable names should be (positively) correlated to the size of their scope. A non-private member *must* be named using whole words. A private member *may* be shorter if the class is very small (less than 20 lines). A local variable *may* be one-letter long, and probably should be one letter long if it is used in a scope of less than 5 lines.
 
 = Discussion =
 
