--- a/trunk/EclipseBoogieEditor/README
+++ b/trunk/EclipseBoogieEditor/README
@@ -1,3 +1,3 @@
-Please use Eclipse 3.5 to work with this project.
-An Eclipse-free development environment is unfortunatelly
-not available at the moment.
+Please use Eclipse 3.5 to work with this project. An Eclipse-free
+development environment is unfortunatelly not available at the
+moment.
