--- a/BmlToBpl/README
+++ b/BmlToBpl/README
@@ -2,7 +2,8 @@ Compile using:
   ant
 
 Run using:
-  java -jar dist/bml2bpl-1.0.jar [FILES] > result.bpl
+  javac Example.java
+  java -jar dist/bml2bpl-1.0.jar Example -o Example.bpl
 
 You should be able to get more info with:
   java -jar dist/bml2bpl-1.0.jar -h
